# inboxkit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.ja.md  CONTRIBUTING.md  LICENSE  Makefile  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml  digestkit-core-inspection.yml  publish.yml  rag-ingest-ci.yml  rag-ingest-inspection.yml  smoke.yml
