# =====================================================================
# inboxkit workspace ルート pyproject.toml
#
# - publish 対象外 (workspace 設定とツール集約のみ)
# - 詳細仕様: docs/repository-structure.md §3
# - 本ファイルは Phase 1 着手のための **最小骨組み**。実装フェーズで
#   ruff / pyright / pytest 設定を本格化する想定 (現状は pytest 設定のみ)。
# =====================================================================

[project]
name = "inboxkit-workspace"
version = "0.0.0"
description = "umbrella workspace for digestkit / digestkit-core / rag-ingest / personal-rag"
requires-python = ">=3.11,<3.14"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "pyright",
]

# ============================
# pytest 設定 (test-strategy.md §1.3 / §5 と整合)
# ============================
[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = "-ra --strict-markers"
markers = [
    "demonstration: 開発者の目視確認が必要 (実 LLM / 実 PDF / 別マシン)",
    "needs_network: 実ネットワーク必須 (CI でのみ実行、ralph-loop ではスキップ)",
    "slow: 1 ケース ≥ 1 秒",
]

# ============================
# ツール設定 (全パッケージ共通)
# ============================

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["packages/*/src", "packages/*/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["packages/*/src", "packages/*/tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
